feat: add hidden h1 title

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
 <body>
 <main class="terminal" aria-label="Terminal portfolio">
+    <h1 class="sr-only">Brad - Terminal Portfolio</h1>
     <header class="topbar">
         <div class="dots" aria-hidden="true">
             <span class="dot red"></span><span class="dot yellow"></span><span class="dot green"></span>
